@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2023, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2023, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -29,17 +29,14 @@ import javax.xml.stream.Location;
 import javax.xml.stream.XMLStreamException;
 
 import org.testng.Assert;
-import org.testng.annotations.Listeners;
 import org.testng.annotations.Test;
 
 /*
  * @test
  * @library /javax/xml/jaxp/libs /javax/xml/jaxp/unittest
- * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow stream.XMLStreamExceptionTest.ExceptionCauseTest
  * @run testng/othervm stream.XMLStreamExceptionTest.ExceptionCauseTest
  * @summary Test XMLStreamException constructor initializes chained exception
  */
-@Listeners({jaxp.library.BasePolicy.class})
 public class ExceptionCauseTest {
 
     @Test
