@@ -32,8 +32,6 @@
  * @run build RMIAltAuthTest SimpleStandard SimpleStandardMBean
  *
  * @run main/othervm RMIAltAuthTest
- * @run main/othervm -Djava.security.manager=allow RMIAltAuthTest
- * @run main/othervm -Djava.security.manager=allow -DSimpleStandard.useGetSubjectACC=true RMIAltAuthTest
  */
 
 import java.io.File;
