@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2008, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2008, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,92 +25,61 @@
  * @test
  * @key headful
  * @bug 6691503
- * @summary Checks that there is no opportunity for a malicious applet
- * to show a popup menu which has whole screen size.
- * a heaviweight popup menu is shown from an applet.
- * @author Mikhail Lapshin
- * @run main/othervm -Djava.security.manager=allow bug6691503
+ * @summary Checks that there is no opportunity for a malicious application
+ *          to show a popup menu which has whole screen size when
+ *          heavyweight popup menu is shown from an app.
+ * @run main bug6691503
  */
 
-import javax.swing.*;
-import java.awt.*;
+import java.awt.Robot;
+import java.awt.Window;
+import javax.swing.JFrame;
+import javax.swing.JMenuItem;
+import javax.swing.JPopupMenu;
+import javax.swing.SwingUtilities;
 
 public class bug6691503 {
-    private JPopupMenu popupMenu;
-    private JFrame frame;
-    private boolean isAlwaysOnTop1 = false;
-    private boolean isAlwaysOnTop2 = true;
+    private static JFrame frame;
+    private static JPopupMenu popupMenu;
+    private static volatile boolean isAlwaysOnTop1 = false;
 
-    public static void main(String[] args) {
-        bug6691503 test = new bug6691503();
-        test.setupUI();
-        test.testApplication();
-        test.testApplet();
-        test.checkResult();
-        test.stopEDT();
-    }
-
-    private void setupUI() {
-        SwingUtilities.invokeLater(new Runnable() {
-            public void run() {
-                frame = new JFrame();
-                frame.setVisible(true);
-                popupMenu = new JPopupMenu();
-                JMenuItem click = new JMenuItem("Click");
-                popupMenu.add(click);
-            }
-        });
-    }
-
-    private void testApplication() {
-        SwingUtilities.invokeLater(new Runnable() {
-            public void run() {
-                popupMenu.show(frame, 0, 0);
-                Window popupWindow = (Window)
-                        (popupMenu.getParent().getParent().getParent().getParent());
-                isAlwaysOnTop1 = popupWindow.isAlwaysOnTop();
-                System.out.println(
-                        "Application: popupWindow.isAlwaysOnTop() = " + isAlwaysOnTop1);
-                popupMenu.setVisible(false);
-            }
-        });
-    }
-
-    private void testApplet() {
-        SwingUtilities.invokeLater(new Runnable() {
-            public void run() {
-                System.setSecurityManager(new SecurityManager());
-                popupMenu.show(frame, 0, 0);
-                Window popupWindow = (Window)
-                        (popupMenu.getParent().getParent().getParent().getParent());
-                isAlwaysOnTop2 = popupWindow.isAlwaysOnTop();
-                System.out.println(
-                        "Applet: popupWindow.isAlwaysOnTop() = " + isAlwaysOnTop2);
-                popupMenu.setVisible(false);
-            }
-        });
-    }
-
-    private void checkResult() {
+    public static void main(String[] args) throws Exception {
         try {
             Robot robot = new Robot();
+            SwingUtilities.invokeAndWait(bug6691503::setupUI);
             robot.waitForIdle();
-        }catch(Exception ex) {
-            ex.printStackTrace();
-            throw new RuntimeException("Unexpected failure");
+            robot.delay(1000);
+
+            SwingUtilities.invokeAndWait(bug6691503::testApplication);
+            robot.delay(200);
+
+            if (!isAlwaysOnTop1) {
+                throw new RuntimeException("Malicious Application can show always-on-top" +
+                        "popup menu which has whole screen size");
+            }
+            System.out.println("Test passed");
+        } finally {
+            SwingUtilities.invokeAndWait(frame::dispose);
         }
-        if (!isAlwaysOnTop1 || isAlwaysOnTop2) {
-            throw new RuntimeException("Malicious applet can show always-on-top " +
-                    "popup menu which has whole screen size");
-        }
-        System.out.println("Test passed");
     }
 
-    private void stopEDT() {
-        SwingUtilities.invokeLater(new Runnable() {
-            public void run() {
-                frame.dispose();
-            }
-        });
+    private static void setupUI() {
+        frame = new JFrame("bug6691503");
+        popupMenu = new JPopupMenu();
+        JMenuItem click = new JMenuItem("Click");
+        popupMenu.add(click);
+        frame.setSize(200, 200);
+        frame.setLocationRelativeTo(null);
+        frame.setVisible(true);
+    }
+
+    private static void testApplication() {
+        popupMenu.show(frame, 0, 0);
+        Window popupWindow = (Window)
+                (popupMenu.getParent().getParent().getParent().getParent());
+        isAlwaysOnTop1 = popupWindow.isAlwaysOnTop();
+        System.out.println("Application: popupWindow.isAlwaysOnTop() = "
+                + isAlwaysOnTop1);
+        popupMenu.setVisible(false);
     }
 }
